...
    <string name="movie_marked_favorite">Success add to favorite</string>
    <string name="movie_marked_unfavorite">Delete from favorite</string>
    <string name="open_search">Open Search</string>
    <string name="open_notification">Open Notification</string>
    <string name="type_search">Type title, categories, years, etc</string>
    <string name="empty_data">Search data is empty</string>
    <string name="recommendation_movie">Movie Recommendation for you</string>
    <string name="recommendation_tv">Tv Recommendation for you</string>
    <string name="see_all">See All</string>
    <string name="open_favorite">Open Favorite</string>
    <string name="cannot_find_search">we are sorry, we can \nnot find the movie :(</string>
    <string name="find_your_movie">Find your movie by Type title, \ncategories, years, etc</string>
    <string name="cannot_find_movie">There is No Movie Yet!</string>
    <string name="coming_soon">This feature is coming soon!</string>
...
    <string name="talk">Talk</string>
    <string name="thriller">Thriller</string>
    <string name="tv_movie">TV Movie</string>
    <string name="war">War</string>
    <string name="war_politics">War &amp; Politics</string>
    <string name="western">Western</string>
    <string name="cancel">Cancel</string>
    <string name="none">None</string>
    <string name="pg">PG-13</string>
    <string name="premium">Premium</string>
    <string name="no_release_date">No Release Date</string>
    <string name="upcoming_movie_release_date_text">Upcoming Movie</string>
    <string name="upcoming_movies">Upcoming Movie</string>
...
