...
    modifier: Modifier = Modifier
){
    Column(modifier = modifier
        .fillMaxSize()
        .background(Dark)
    ){
        SearchTextField(
            query = uiState.query,
            onQueryChange = onQueryChange
        )

        AnimatedContent(targetState = uiState.isSearching, label = "Searching") { isSearching ->
            if(isSearching){
...
    onTvShowClick: (Int) -> Unit,
    deleteFromHistory: (Int) -> Unit,
    modifier: Modifier = Modifier
) {
    val shouldShowPlaceholder: Boolean = searchHistory.isEmpty() && isHistory
    LazyColumn(
        modifier = modifier.fillMaxSize().testTag("SuggestionsContentLazyColumn"),
        verticalArrangement = Arrangement.spacedBy(3.dp),
        contentPadding = PaddingValues(bottom = 16.dp)
    ) {
        if(shouldShowPlaceholder){
            items(1){
                MovieShimmerHorizontalCard()
...
                isLoading = isTrendingMovie,
                onCardClick = onMovieClick
            )
        }

        item {
            TvContainer(
                titleResourceId = R.string.recommendation_tv,
                onSeeAllClick = { onSeeAllClick(MediaType.Common.TvShow.Trending) },
                tvShow = tvShow,
                isLoading = isTrendingTv,
                onCardClick = onTvShowClick
            )
...
