...
    }

    fun addSearchHistory(movie : Movie) {
        viewModelScope.launch {
            addMovieToSearchHistoryUseCase.invoke(movie.asSearchModel())
            loadSearchHistory()
            _uiState.value.userMessage.value = "Success Add to History"
        }
    }

    fun deleteSearchHistory(id : Int) {
        viewModelScope.launch {
            deleteMovieFromSearchHistoryUseCase.invoke(id)
            loadSearchHistory()
            _uiState.value.userMessage.value = "Success Delete From History"
        }
    }

    private fun loadSearchHistory() = viewModelScope.launch {
        getSearchHistoryUseCase.invoke().collect{ response->
            when(response){
...
