...
            errorTitle = R.string.cannot_find_search,
            errorDescription = R.string.find_your_movie
        )
    }
) {
    LazyColumn(
        modifier = modifier.fillMaxSize().testTag("SearchLazyColumn"),
        contentPadding = PaddingValues(horizontal = 8.dp)
    ) {
        items(count = movies.itemCount, key = movies.itemKey { it.id ?: "" }) { item ->
            val movie = movies[item]
            MovieHorizontalCard(movie = movie, onClick = onClick, onHistory = onHistory)
        }
...
    onSeeAllClick: () -> Unit,
    movies: List<Movie>,
    isLoading : Boolean,
    onCardClick: (Int) -> Unit,
    modifier: Modifier = Modifier,
) {
    Column(modifier = modifier.fillMaxWidth().testTag("MovieContainer")) {
        ContainerTitleWithButton(
            titleResourceId = titleResourceId,
            onSeeAllClick = onSeeAllClick
        )
        MovieVerticalListContainer(
            movies = movies,
...
